// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Number Default 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Disabled 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 lkRoav"
        disabled={true}
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="0.25"
        type="text"
        value="152.25"
      />
      <button
        className="Number__Stepper-qvkb6m-2 hKKoqB"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          0.25
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 hKKoqB"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          0.25
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Required 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Required
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default (without star)
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                required={true}
                step={1}
                type="text"
                value="91"
              />
              <button
                className="Number__Stepper-qvkb6m-2 dDksNQ"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  decrease number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 2"
                >
                  <path
                    d="M12.166 0v2h-12V0z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <button
                className="Number__Stepper-qvkb6m-2 dDksNQ"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  increase number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 12"
                >
                  <path
                    d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        With star
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label *
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                required={true}
                step={1}
                type="text"
                value="91"
              />
              <button
                className="Number__Stepper-qvkb6m-2 dDksNQ"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  decrease number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 2"
                >
                  <path
                    d="M12.166 0v2h-12V0z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <button
                className="Number__Stepper-qvkb6m-2 dDksNQ"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  increase number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 12"
                >
                  <path
                    d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Number With a smaller step 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="0.005"
        type="text"
        value="15.200"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          0.005
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          0.005
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With all actions 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With auto focus 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        autoFocus={true}
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="0.25"
        type="text"
        value="152.25"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          0.25
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          0.25
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With both addons 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fCodKG"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Number__AddonBox-qvkb6m-1 jEkHkH"
        position="left"
      >
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
            id="a"
          />
        </svg>
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Number__AddonBox-qvkb6m-1 ipRtnU"
        position="right"
      >
        SEK
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With default value (Uncontrolled behaviour) 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="0.1"
        type="text"
        value="15.2"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          0.1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          0.1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With error if value is less than 1 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        aria-invalid={true}
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 gmxWOK"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="1"
        type="text"
        value="0"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      Number needs to be greater than 0
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With extra info and error 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        aria-invalid={true}
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 gmxWOK"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="0"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      Number needs to be greater than 0
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With extra info below 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
    >
      Use wisely this space
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With hidden label 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 gyUewZ"
    hidden={true}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Label 
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With label tooltip 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
        <svg
          aria-hidden="false"
          className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR FormField__TooltipIcon-ydn0fr-1 ioayVJ"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
        >
          <g
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <circle
              className="Questionmark__StyledCircle-sc-1uxskjf-0 gHSezF"
              cx="11"
              cy="11"
              fill="none"
              r="11"
            />
            <path
              d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
              fillRule="nonzero"
            />
          </g>
          <title>
            Tooltip content
          </title>
        </svg>
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With left addon 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 iBAQHO"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Number__AddonBox-qvkb6m-1 jEkHkH"
        position="left"
      >
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
            id="a"
          />
        </svg>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With max and min 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
        id="insert-unique-id"
        inputMode="decimal"
        max="20"
        min="10"
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="12"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With no steppers 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 kyMiQa"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With placeholder 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Placeholders
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 kyMiQa"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="A placeholder"
                step={1}
                type="text"
                value=""
              />
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        With right addon
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 gXnHUX"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="A placeholder"
                step={1}
                type="text"
                value=""
              />
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Number__AddonBox-qvkb6m-1 ipRtnU"
                position="right"
              >
                EUR
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        With left addon
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 iBAQHO"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="A placeholder"
                step={1}
                type="text"
                value=""
              />
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Number__AddonBox-qvkb6m-1 jEkHkH"
                position="left"
              >
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                    id="a"
                  />
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        With steppers (placeholder removed)
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                step={1}
                type="text"
                value=""
              />
              <button
                className="Number__Stepper-qvkb6m-2 dDksNQ"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  decrease number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 2"
                >
                  <path
                    d="M12.166 0v2h-12V0z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <button
                className="Number__Stepper-qvkb6m-2 dDksNQ"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  increase number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 12"
                >
                  <path
                    d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Number With right addon 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 gXnHUX"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Number__AddonBox-qvkb6m-1 ipRtnU"
        position="right"
      >
        SEK
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With size small 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Size = "s"
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 idrvCD"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                step={1}
                type="text"
                value="1"
              />
              <button
                className="Number__Stepper-qvkb6m-2 cacvY"
                onClick={[Function]}
                size="s"
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  decrease number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 2"
                >
                  <path
                    d="M12.166 0v2h-12V0z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <button
                className="Number__Stepper-qvkb6m-2 cacvY"
                onClick={[Function]}
                size="s"
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  increase number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 12"
                >
                  <path
                    d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        No steppers
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 ebRoJr"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                step={1}
                type="text"
                value="1"
              />
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Error
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
            </span>
          </label>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
            >
              <input
                aria-invalid={true}
                className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 buchqr"
                id="insert-unique-id"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                step={1}
                type="text"
                value="1"
              />
              <button
                className="Number__Stepper-qvkb6m-2 cacvY"
                onClick={[Function]}
                size="s"
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  decrease number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 2"
                >
                  <path
                    d="M12.166 0v2h-12V0z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <button
                className="Number__Stepper-qvkb6m-2 cacvY"
                onClick={[Function]}
                size="s"
                type="button"
              >
                <div
                  className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
                >
                  increase number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 12 12"
                >
                  <path
                    d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </span>
          <div>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
            >
              <div
                className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
              >
                Error: 
              </div>
              Some error text that will wrap itself over couple of lines
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Number With success 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
    >
      <input
        className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 jgVsPM"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="Number__Stepper-qvkb6m-2 dDksNQ"
        onClick={[Function]}
        type="button"
      >
        <div
          className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With value (Controlled behaviour) 1`] = `
Array [
  <div
    className="FormField__Wrapper-ydn0fr-0 kMOuNd"
  >
    <label
      className="FormLabel__StyledLabel-skax1c-0 VHIlu"
      hidden={false}
      htmlFor="insert-unique-id"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          Label 
        </div>
      </span>
    </label>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dWgTod Number__Wrapper-qvkb6m-0 fdbvNy"
      >
        <input
          className="NormalizedInput__Input-sc-1m4kmh9-0 Number__Input-qvkb6m-3 fawBKy"
          id="insert-unique-id"
          inputMode="decimal"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="text"
          value="10"
        />
        <button
          className="Number__Stepper-qvkb6m-2 dDksNQ"
          onClick={[Function]}
          type="button"
        >
          <div
            className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 2"
          >
            <path
              d="M12.166 0v2h-12V0z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="Number__Stepper-qvkb6m-2 dDksNQ"
          onClick={[Function]}
          type="button"
        >
          <div
            className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="IconBase__StyledIconBase-sc-10cbji3-0 Qzjd"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </span>
  </div>,
  <button
    onClick={[Function]}
    type="button"
  >
    Decrease
  </button>,
  <button
    onClick={[Function]}
    type="button"
  >
    Increase
  </button>,
]
`;
